--- a/belanja.html
+++ b/belanja.html
@@ -39,7 +39,7 @@
       <!-- header section strats -->
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="images/logo2.png" style="width: 150px" alt="" />
             <!-- <span>
             RODALINK
@@ -63,7 +63,7 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Beranda</a>
+                  <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="team.html">Team</a>
