--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
       <!-- header section strats -->
       <header class="header_section long_section px-0">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="images/logo2.png" style="width: 150px" alt="" />
             <!-- <span>
             RODALINK
@@ -63,7 +63,7 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Beranda</a>
+                  <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="team.html">Team</a>
@@ -213,7 +213,7 @@
                 QUICK LINKS
               </h4>
               <div class="info_links_menu">
-                <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="" href="/">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
                 <a class="" href="furniture.html">Furniture</a>
                 <a class="" href="blog.html">Blog</a>
