add Open Graph meta tags for improved social sharing

--- a/belanja.html
+++ b/belanja.html
@@ -26,6 +26,23 @@
       rel="stylesheet"
     />
 
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://roda-link-cleopatra.vercel.app//"
+    />
+    <meta
+      property="og:image"
+      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
+    />
+    <meta
+      property="og:description"
+      content="GATHERING RODALINK
+    3D2N"
+    />
+
     <!-- font awesome style -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
