add Open Graph meta tags for team and index pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="Roda Link - Cleopatra" />
+        <meta property="og:type" content="website" />
+        <meta
+          property="og:url"
+          content="https://roda-link-cleopatra.vercel.app//"
+        />
+        <meta
+          property="og:image"
+          content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
+        />
+        <meta
+          property="og:description"
+          content="GATHERING RODALINK
+        3D2N"
+        />
+
     <!-- fonts style -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
