rename furniture section to team section and update related styles

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-        <!-- Open Graph Meta Tags -->
-        <meta property="og:title" content="Roda Link - Cleopatra" />
-        <meta property="og:type" content="website" />
-        <meta
-          property="og:url"
-          content="https://roda-link-cleopatra.vercel.app//"
-        />
-        <meta
-          property="og:image"
-          content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
-        />
-        <meta
-          property="og:description"
-          content="GATHERING RODALINK
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Roda Link - Cleopatra" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://roda-link-cleopatra.vercel.app//"
+    />
+    <meta
+      property="og:image"
+      content="https://roda-link-cleopatra.vercel.app/images/logo.jpg"
+    />
+    <meta
+      property="og:description"
+      content="GATHERING RODALINK
         3D2N"
-        />
+    />
 
     <!-- fonts style -->
     <link
@@ -88,6 +88,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="belanja.html">Belanja</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="belanja.html">Fasilitator</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="belanja.html">Saluran</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -121,7 +127,7 @@
     </section>
     <!-- furniture section -->
 
-    <section class="furniture_section layout_padding" id="rundown">
+    <section class="team_section layout_padding" id="rundown">
       <div class="container">
         <div class="heading_container">
           <h2>RUNDOWN <span style="color: #d92629">DAY 1</span></h2>
@@ -129,167 +135,52 @@
           Jadwal Kegiatan
         </p> -->
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Penjemputan Peserta</h3>
-                <p>[06:00 - 08:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Disiapkan 2 unit Big Bus.</p>
-                  </li>
-                  <li>
-                    <p>
-                      Bus 1 Standby di Sidoarjo pukul 06.00 menjemput peserta di
-                      Stasiun Gubeng dan menuju Rodalink Surabaya HRM.
-                    </p>
-                  </li>
-                  <li>
-                    <p>
-                      Bus 2 Standby di Red Bus Bungur 06.00 dan menuju Rodalink
-                      Surabaya HRM.
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Peserta Berkumpul di Rodalink Surabaya HRM</h3>
-                <p>[08:30 - 09:00]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Menunggu Di dalam Bus.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Perjalanan Menuju Purnama Hotel</h3>
-                <p>[10:30 - 13:00]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Makan Siang Box di Bus.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-            <div class="box w-100">
-              <div class="detail-box">
-                <h3 class="">Store Tour Polygon Bike Hub</h3>
-                <p>[09:00 - 10:30]</p>
-                <ul style="padding-left: 0">
-                  <li>
-                    <p>Pembagian Snack Box & Foto bersama.</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+        <table class="table table-bordered" style="margin-top: 50px">
+          <thead>
+            <tr>
+              <th style="width: 30%">Kegiatan</th>
+              <th style="width: 20%">Waktu</th>
+              <th style="width: 50%">Keterangan</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Penjemputan Peserta</td>
+              <td>[06:00 - 08:30]</td>
+              <td>
+                <p>Disiapkan 2 unit Big Bus.</p>
+                <p>
+                  Bus 1 Standby di Sidoarjo pukul 06.00 menjemput peserta di
+                  Stasiun Gubeng dan menuju Rodalink Surabaya HRM.
+                </p>
+                <p>
+                  Bus 2 Standby di Red Bus Bungur 06.00 dan menuju Rodalink
+                  Surabaya HRM.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Peserta Berkumpul di Rodalink Surabaya HRM</td>
+              <td>[08:30 - 09:00]</td>
+              <td>Menunggu Di dalam Bus.</td>
+            </tr>
+            <tr>
+              <td>Store Tour Polygon Bike Hub</td>
+              <td>[09:00 - 10:30]</td>
+              <td>Pembagian Snack Box & Foto bersama.</td>
+            </tr>
+            <tr>
+              <td>Perjalanan Menuju Purnama Hotel</td>
+              <td>[10:30 - 13:00]</td>
+              <td>Makan Siang Box di Bus.</td>
+            </tr>
+            <tr>
+              <td>Tiba di Hotel Purnama</td>
+              <td>[13:00 - 13:30]</td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
 
@@ -297,7 +188,7 @@
 
     <!-- about section -->
 
-    <section class="about_section layout_padding long_section">
+    <!-- <section class="about_section layout_padding long_section">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -321,7 +212,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- end about section -->
 
