--- a/team.html
+++ b/team.html
@@ -97,96 +97,83 @@
 
     <!-- furniture section -->
 
-    <section class="furniture_section layout_padding">
+    <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
           <h2>TEAM BUILDING</h2>
-          <!-- <p>
-            which don't look even slightly believable. If you are going to use a
-            passage of Lorem Ipsum, you need to be sure there isn't an
-          </p> -->
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f1.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>brown Chair Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 100.00</h6>
-                  <a href=""> Buy Now </a>
+        <div
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #d92629; padding: 20px"
+        >
+          <h4>
+            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
+            Fasilitator Herman
+          </h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-4">
+              <div class="box">
+                <!-- <div class="img-box">
+                  <img src="images/f1.png" alt="" />
+                </div> -->
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Yoko Samuel</li>
+                    <li>Dodik Puryadi</li>
+                    <li>Asep Muharam</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                  </ul>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f2.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Double Bed Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 200.00</h6>
-                  <a href=""> Buy Now </a>
+            <div class="col-md-6 col-lg-4">
+              <div class="box">
+                <!-- <div class="img-box">
+                  <img src="images/f1.png" alt="" />
+                </div> -->
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Yoko Samuel</li>
+                    <li>Dodik Puryadi</li>
+                    <li>Asep Muharam</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                  </ul>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f3.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>House Chair Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 200.00</h6>
-                  <a href=""> Buy Now </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f4.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>brown Table Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 100.00</h6>
-                  <a href=""> Buy Now </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f5.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Blue Chair Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 200.00</h6>
-                  <a href=""> Buy Now </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/f6.png" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Brown Table Design</h5>
-                <div class="price_box">
-                  <h6 class="price_heading"><span>$</span> 200.00</h6>
-                  <a href=""> Buy Now </a>
+            <div class="col-md-6 col-lg-4">
+              <div class="box">
+                <!-- <div class="img-box">
+                  <img src="images/f1.png" alt="" />
+                </div> -->
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Yoko Samuel</li>
+                    <li>Dodik Puryadi</li>
+                    <li>Asep Muharam</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                    <li>Yoko Samuel</li>
+                  </ul>
                 </div>
               </div>
             </div>
