update navigation links and styles; add new saluran page

--- a/belanja.html
+++ b/belanja.html
@@ -88,6 +88,12 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="belanja.html">Belanja</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -95,117 +101,97 @@
       </header>
     </div>
 
-    <!-- furniture section -->
-    <section class="client_section layout_padding">
+    <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>BELANJA</h2>
+          <h2 class="text-center">BELANJA</h2>
         </div>
         <div
-          id="carouselExample2Controls"
-          class="carousel slide"
-          data-ride="carousel"
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #33333374; padding: 20px"
         >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/client.jpg" alt="" />
-                    </div>
-                    <div class="detail-box">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Siaalya</h6>
-                      </div>
-                      <p>
-                        It is a long established fact that a reader will be
-                        distracted by the readable cIt is a long established
-                        fact that a reader will be distracted by the readable c
-                      </p>
-                    </div>
-                  </div>
+          <!-- <h4>
+            <span style="color: #d92629; font-weight: bold">Team Merah</span> |
+            Fasilitator Herman
+          </h4> -->
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>1 dada ayam utuh</li>
+                    <li>300 gr daging ikan bandeng goreng</li>
+                    <li>2 batang sereh</li>
+                    <li>3 lembar daun salam</li>
+                    <li>2 ruas lengkuas</li>
+                    <li>
+                      5 buah pepaya muda ukuran kecil (potong & cuci bersih)
+                    </li>
+                    <li>2 lembar daun jeruk</li>
+                    <li>2 lembar daun salam</li>
+                    <li>1 sashet terasi</li>
+                    <li>2 pc santan karab</li>
+                  </ul>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/client.jpg" alt="" />
-                    </div>
-                    <div class="detail-box">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Siaalya</h6>
-                      </div>
-                      <p>
-                        It is a long established fact that a reader will be
-                        distracted by the readable cIt is a long established
-                        fact that a reader will be distracted by the readable c
-                      </p>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>5 buah Tahu Cokelat</li>
+                    <li>2 buah Tahu Putih</li>
+                    <li>10 buah Buncis</li>
+                    <li>7 siung Bawang Merah</li>
+                    <li>4 siung Bawang Putih</li>
+                    <li>10 lembar daun jeruk</li>
+                    <li>12 buah bawang merah</li>
+                    <li>5 buah bawang putih</li>
+                    <li>1 sdt ketumbar</li>
+                    <li>6 buah kemiri</li>
+                    <li>2 ruas kunyit</li>
+                    <li>1 ruas lengkuas</li>
+                    <li>10 buah cabe merah</li>
+                    <li>5 buah cabe keriting</li>
+                  </ul>
                 </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
-                  <div class="box">
-                    <div class="img-box">
-                      <img src="images/client.jpg" alt="" />
-                    </div>
-                    <div class="detail-box">
-                      <div class="name">
-                        <i class="fa fa-quote-left" aria-hidden="true"></i>
-                        <h6>Siaalya</h6>
-                      </div>
-                      <p>
-                        It is a long established fact that a reader will be
-                        distracted by the readable cIt is a long established
-                        fact that a reader will be distracted by the readable c
-                      </p>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="box" style="margin-top: 0; height: 100%">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Belanja 3</h5>
+                  <ul style="padding-left: 0">
+                    <li>2 buah tahu jumbo</li>
+                    <li>1 papan tempe</li>
+                    <li>200 gr udang</li>
+                    <li>5 buah Cabe Keriting Hijau</li>
+                    <li>2 lembar Daun Salam</li>
+                    <li>2 cm Lengkuas, memarkan</li>
+                    <li>65 ml Santan Instan</li>
+                    <li>9 bawang merah</li>
+                    <li>7 bawang putih</li>
+                    <li>5 butir kemiri</li>
+                    <li>1 jempol kunyit</li>
+                    <li>2 ruas jahe</li>
+                    <li>1 sdt ketumbar</li>
+                  </ul>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="carousel_btn-container">
-            <a
-              class="carousel-control-prev"
-              href="#carouselExample2Controls"
-              role="button"
-              data-slide="prev"
-            >
-              <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a
-              class="carousel-control-next"
-              href="#carouselExample2Controls"
-              role="button"
-              data-slide="next"
-            >
-              <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- end furniture section -->
 
     <!-- footer section -->
     <footer class="footer_section">
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="" style="color: #d92629">Ruang Hybrid</a>
         </p>
       </div>
     </footer>
