--- a/fasilitator.html
+++ b/fasilitator.html
@@ -20,6 +20,12 @@
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
+    <!-- fonts style -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Roda Link - Cleopatra" />
     <meta property="og:type" content="website" />
@@ -34,13 +40,7 @@
     <meta
       property="og:description"
       content="GATHERING RODALINK
-        3D2N"
-    />
-
-    <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
-      rel="stylesheet"
+    3D2N"
     />
 
     <!-- font awesome style -->
@@ -51,7 +51,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="sub_page">
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section long_section px-0">
@@ -79,7 +79,7 @@
               class="d-flex ml-auto flex-column flex-lg-row align-items-center"
             >
               <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
@@ -88,7 +88,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="belanja.html">Belanja</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="fasilitator.html">Fasilitator</a>
                 </li>
                 <li class="nav-item">
@@ -101,94 +101,99 @@
       </header>
     </div>
 
-    <section class="slider_section long_section">
+    <!-- furniture section -->
+    <section class="client_section layout_padding">
       <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <div class="detail-box">
-              <h1>
-                GATHERING RODALINK <br />
-                3D2N
-              </h1>
-              <p>KOTA BATU, 11-13 FEBRUARI 2025</p>
-              <div class="btn-box">
-                <a href="team.html" class="btn1"> TEAM </a>
-                <a href="#rundown" class="btn2"> RUNDOWN </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-7">
+      <div class="heading_container">
+        <h2>FASILITATOR</h2>
+      </div>
+      <div
+        id="carouselExample2Controls"
+        class="carousel slide"
+        data-ride="carousel"
+        data-interval="false"
+      >
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row">
+          <div class="col-md-11 col-lg-10 mx-auto">
+            <div class="box">
             <div class="img-box">
-              <img src="images/slider-img.png" alt="" />
+              <img src="images/herman.jpeg" alt="" />
+            </div>
+            <div class="detail-box">
+              <div class="name">
+              <i class="fa fa-quote-left" aria-hidden="true"></i>
+              <h6>Herman</h6>
+              </div>
+              <p>Ini Herman Fasilitator Group Merah.</p>
+            </div>
             </div>
           </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+          <div class="col-md-11 col-lg-10 mx-auto">
+            <div class="box">
+            <div class="img-box" style="border: 10px solid #d9ca26">
+              <img src="images/guntoro.jpeg" alt="" />
+            </div>
+            <div class="detail-box">
+              <div class="name">
+              <i class="fa fa-quote-left" aria-hidden="true"></i>
+              <h6>Guntoro</h6>
+              </div>
+              <p>Ini Guntoro Fasilitator Group Kuning.</p>
+            </div>
+            </div>
+          </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+          <div class="col-md-11 col-lg-10 mx-auto">
+            <div class="box">
+            <div class="img-box" style="border: 10px solid #41d926">
+              <img src="images/robby.jpeg" alt="" />
+            </div>
+            <div class="detail-box">
+              <div class="name">
+              <i class="fa fa-quote-left" aria-hidden="true"></i>
+              <h6>Robby</h6>
+              </div>
+              <p>Ini Robby Fasilitator Group Hijau.</p>
+            </div>
+            </div>
+          </div>
+          </div>
+        </div>
+        </div>
+        <div class="carousel_btn-container">
+        <a
+          class="carousel-control-prev"
+          href="#carouselExample2Controls"
+          role="button"
+          data-slide="prev"
+        >
+          <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExample2Controls"
+          role="button"
+          data-slide="next"
+        >
+          <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+          <span class="sr-only">Next</span>
+        </a>
         </div>
       </div>
-    </section>
-    <!-- furniture section -->
-
-    <section class="team_section layout_padding" id="rundown">
-      <div class="container">
-        <div class="heading_container">
-          <h2>RUNDOWN <span style="color: #d92629">DAY 1</span></h2>
-          <!-- <p>
-          Jadwal Kegiatan
-        </p> -->
-        </div>
-        <table class="table table-bordered" style="margin-top: 50px">
-          <thead>
-            <tr>
-              <th style="width: 30%">Kegiatan</th>
-              <th style="width: 20%">Waktu</th>
-              <th style="width: 50%">Keterangan</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Penjemputan Peserta</td>
-              <td>[06:00 - 08:30]</td>
-              <td>
-                <p>Disiapkan 2 unit Big Bus.</p>
-                <p>
-                  Bus 1 Standby di Sidoarjo pukul 06.00 menjemput peserta di
-                  Stasiun Gubeng dan menuju Rodalink Surabaya HRM.
-                </p>
-                <p>
-                  Bus 2 Standby di Red Bus Bungur 06.00 dan menuju Rodalink
-                  Surabaya HRM.
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td>Peserta Berkumpul di Rodalink Surabaya HRM</td>
-              <td>[08:30 - 09:00]</td>
-              <td>Menunggu Di dalam Bus.</td>
-            </tr>
-            <tr>
-              <td>Store Tour Polygon Bike Hub</td>
-              <td>[09:00 - 10:30]</td>
-              <td>Pembagian Snack Box & Foto bersama.</td>
-            </tr>
-            <tr>
-              <td>Perjalanan Menuju Purnama Hotel</td>
-              <td>[10:30 - 13:00]</td>
-              <td>Makan Siang Box di Bus.</td>
-            </tr>
-            <tr>
-              <td>Tiba di Hotel Purnama</td>
-              <td>[13:00 - 13:30]</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </section>
 
     <!-- end furniture section -->
-
-    <!-- about section -->
-
-    <!-- end about section -->
 
     <!-- footer section -->
     <footer class="footer_section">
