--- a/saluran.html
+++ b/saluran.html
@@ -20,6 +20,12 @@
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
+    <!-- fonts style -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Roda Link - Cleopatra" />
     <meta property="og:type" content="website" />
@@ -34,13 +40,7 @@
     <meta
       property="og:description"
       content="GATHERING RODALINK
-        3D2N"
-    />
-
-    <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap"
-      rel="stylesheet"
+    3D2N"
     />
 
     <!-- font awesome style -->
@@ -51,7 +51,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="sub_page">
     <div class="hero_area">
       <!-- header section strats -->
       <header class="header_section long_section px-0">
@@ -79,7 +79,7 @@
               class="d-flex ml-auto flex-column flex-lg-row align-items-center"
             >
               <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/">Beranda</a>
                 </li>
                 <li class="nav-item">
@@ -91,7 +91,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="fasilitator.html">Fasilitator</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="saluran.html">Saluran</a>
                 </li>
               </ul>
@@ -101,94 +101,43 @@
       </header>
     </div>
 
-    <section class="slider_section long_section">
+    <!-- furniture section -->
+    <section class="client_section layout_padding">
       <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <div class="detail-box">
-              <h1>
-                GATHERING RODALINK <br />
-                3D2N
-              </h1>
-              <p>KOTA BATU, 11-13 FEBRUARI 2025</p>
-              <div class="btn-box">
-                <a href="team.html" class="btn1"> TEAM </a>
-                <a href="#rundown" class="btn2"> RUNDOWN </a>
+        <div class="heading_container">
+          <h2>SALURAN <span style="color: #d92629">RODALINK</span></h2>
+        </div>
+
+        <div class="about_section layout_padding long_section">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="img-box">
+                  <img
+                    src="images/logo.jpg"
+                    style="border-radius: 10px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="detail-box">
+                  <p>Bergabung ke saluran Roda Link melalui Whatsapp</p>
+                  <a
+                    href="https://whatsapp.com/channel/0029Vb5wTUU9hXFEFrNsDo23"
+                    class="btn1"
+                  >
+                    <i class="fa fa-whatsapp"></i> Gabung
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-7">
-            <div class="img-box">
-              <img src="images/slider-img.png" alt="" />
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
-    <!-- furniture section -->
-
-    <section class="team_section layout_padding" id="rundown">
-      <div class="container">
-        <div class="heading_container">
-          <h2>RUNDOWN <span style="color: #d92629">DAY 1</span></h2>
-          <!-- <p>
-          Jadwal Kegiatan
-        </p> -->
-        </div>
-        <table class="table table-bordered" style="margin-top: 50px">
-          <thead>
-            <tr>
-              <th style="width: 30%">Kegiatan</th>
-              <th style="width: 20%">Waktu</th>
-              <th style="width: 50%">Keterangan</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Penjemputan Peserta</td>
-              <td>[06:00 - 08:30]</td>
-              <td>
-                <p>Disiapkan 2 unit Big Bus.</p>
-                <p>
-                  Bus 1 Standby di Sidoarjo pukul 06.00 menjemput peserta di
-                  Stasiun Gubeng dan menuju Rodalink Surabaya HRM.
-                </p>
-                <p>
-                  Bus 2 Standby di Red Bus Bungur 06.00 dan menuju Rodalink
-                  Surabaya HRM.
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td>Peserta Berkumpul di Rodalink Surabaya HRM</td>
-              <td>[08:30 - 09:00]</td>
-              <td>Menunggu Di dalam Bus.</td>
-            </tr>
-            <tr>
-              <td>Store Tour Polygon Bike Hub</td>
-              <td>[09:00 - 10:30]</td>
-              <td>Pembagian Snack Box & Foto bersama.</td>
-            </tr>
-            <tr>
-              <td>Perjalanan Menuju Purnama Hotel</td>
-              <td>[10:30 - 13:00]</td>
-              <td>Makan Siang Box di Bus.</td>
-            </tr>
-            <tr>
-              <td>Tiba di Hotel Purnama</td>
-              <td>[13:00 - 13:30]</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </section>
 
     <!-- end furniture section -->
-
-    <!-- about section -->
-
-    <!-- end about section -->
 
     <!-- footer section -->
     <footer class="footer_section">
