--- a/team.html
+++ b/team.html
@@ -88,6 +88,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="belanja.html">Belanja</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="fasilitator.html">Fasilitator</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="saluran.html">Saluran</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -100,7 +106,7 @@
     <section class="team_section layout_padding">
       <div class="container">
         <div class="heading_container">
-          <h2>TEAM BUILDING</h2>
+          <h2 class="text-center">TEAM BUILDING</h2>
         </div>
         <div
           class="team-container"
@@ -111,68 +117,193 @@
             Fasilitator Herman
           </h4>
           <div class="row">
-            <div class="col-md-6 col-lg-4">
-              <div class="box">
-                <!-- <div class="img-box">
-                  <img src="images/f1.png" alt="" />
-                </div> -->
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
                   <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
                   <ul style="padding-left: 0">
                     <li>Yoko Samuel</li>
                     <li>Dodik Puryadi</li>
                     <li>Asep Muharam</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
+                    <li>Eva Mahayani</li>
+                    <li>Teguh Wibowo</li>
+                    <li>Erlinawati</li>
+                    <li>Andrea Maulana</li>
+                    <li>Evan Christophel</li>
+                    <li>Chandra Kurniawan</li>
+                    <li>Sandy Yudha Sebayang</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="box">
-                <!-- <div class="img-box">
-                  <img src="images/f1.png" alt="" />
-                </div> -->
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
+                  <h5 class="font-weight-bold">Tim 2 : Regional Yoko 2</h5>
                   <ul style="padding-left: 0">
-                    <li>Yoko Samuel</li>
-                    <li>Dodik Puryadi</li>
-                    <li>Asep Muharam</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
+                    <li>Ayub Simorangkir</li>
+                    <li>Hery Amanda</li>
+                    <li>Indra Kurniawan</li>
+                    <li>Herin Fasah</li>
+                    <li>Almesiah Bilqisthy</li>
+                    <li>Said Adi Bowo</li>
+                    <li>Giar Sugiarto</li>
+                    <li>Dea Setianingsih</li>
+                    <li>Azmi Kurniawan</li>
+                    <li>Ari Sandika</li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="box">
-                <!-- <div class="img-box">
-                  <img src="images/f1.png" alt="" />
-                </div> -->
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
                 <div class="detail-box">
-                  <h5 class="font-weight-bold">Tim 1 : Regional Yoko 1</h5>
+                  <h5 class="font-weight-bold">Tim 3 : HQ</h5>
                   <ul style="padding-left: 0">
-                    <li>Yoko Samuel</li>
-                    <li>Dodik Puryadi</li>
-                    <li>Asep Muharam</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
-                    <li>Yoko Samuel</li>
+                    <li>Felicia Felita Hartono</li>
+                    <li>Lucky Tantra</li>
+                    <li>Valentania Prischa Ard</li>
+                    <li>Jennifer Emily</li>
+                    <li>Andry Kristianto</li>
+                    <li>Irwan Santoso</li>
+                    <li>Stephanie Manoppo</li>
+                    <li>Will Jeckson Simbolon</li>
+                    <li>Mahardiyan Raihan</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #d9ca26; padding: 20px"
+        >
+          <h4>
+            <span style="color: #d9ca26; font-weight: bold">Team Kuning</span> |
+            Fasilitator Guntoro
+          </h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 4 : Regional Adit 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Aditya Septian</li>
+                    <li>Syarif Hidayatullah</li>
+                    <li>Andri Purba</li>
+                    <li>Kadek Arya</li>
+                    <li>Christian Hadinata</li>
+                    <li>Febrioka Mawahibul Riza</li>
+                    <li>Rinto Gus Panoraga</li>
+                    <li>Sri Wahyudi</li>
+                    <li>R. Kevin Adrian Danudoro</li>
+                    <li>Sugeng Santoso</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 5 : Regional Adit 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>Irfan Maulana</li>
+                    <li>Sugiharto</li>
+                    <li>Bayu Aria Wardana</li>
+                    <li>Machdi Rochmad T.W</li>
+                    <li>Muhamad Arifin</li>
+                    <li>Fendy Evendy Putra</li>
+                    <li>M. Choiril Huda</li>
+                    <li>Kurniyanto</li>
+                    <li>Ghali Pranandika</li>
+                    <li>Dodiastyo Hutomo</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 6 : HQ</h5>
+                  <ul style="padding-left: 0">
+                    <li>Juliana Kurniawan</li>
+                    <li>Arief Darmawan</li>
+                    <li>Shafa Abid Ihtisan</li>
+                    <li>Samuel Adam</li>
+                    <li>Rina Mutia</li>
+                    <li>Jimmy Indra</li>
+                    <li>Permata Nirwana R</li>
+                    <li>Claudia Ressy</li>
+                    <li>M. Rizqi</li>
+                    <li>Yusuf Dwi Meirianto</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="team-container"
+          style="margin-top: 50px; border: 1px solid #41d926; padding: 20px"
+        >
+          <h4>
+            <span style="color: #41d926; font-weight: bold">Team Hijau</span> |
+            Fasilitator Robby
+          </h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 7 : Regional Mario 1</h5>
+                  <ul style="padding-left: 0">
+                    <li>Mario Wahyu Slamet</li>
+                    <li>Ici Nurdin</li>
+                    <li>Ryan Afriansyah</li>
+                    <li>Qudratulah Alamsyah</li>
+                    <li>Victor Gerkat Jois B</li>
+                    <li>Novri Andri</li>
+                    <li>Rovita Silaban</li>
+                    <li>M. Rizky Andrean</li>
+                    <li>Dimas Muhammad Hafidz</li>
+                    <li>Catur Basuki</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 8 : Regional Mario 2</h5>
+                  <ul style="padding-left: 0">
+                    <li>Nursinggih Dwi Avriliasto</li>
+                    <li>Yosua Eka Kurniawan</li>
+                    <li>Ano Rano</li>
+                    <li>Fajrin Ramadhan</li>
+                    <li>Balkis Sapto Budiyono</li>
+                    <li>Dedy Kurniawan</li>
+                    <li>Fadhil Rizaldi</li>
+                    <li>Eko Yulianto</li>
+                    <li>Zulny Fathur Adam</li>
+                    <li>Ahmad Syahroni</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
+              <div class="box w-100">
+                <div class="detail-box">
+                  <h5 class="font-weight-bold">Tim 9 : HQ</h5>
+                  <ul style="padding-left: 0">
+                    <li>Arie Satrya Budianto</li>
+                    <li>Denny Stevano</li>
+                    <li>Regita Rahmanissa</li>
+                    <li>Sugi Mulyono</li>
+                    <li>Gilberto Erwanto</li>
+                    <li>Erni Ermawati</li>
+                    <li>Harry Kurniawan</li>
+                    <li>Christin Angelita</li>
+                    <li>Saraswati Nugraheni</li>
                   </ul>
                 </div>
               </div>
@@ -184,113 +315,12 @@
 
     <!-- end furniture section -->
 
-    <!-- info section -->
-    <!-- <section class="info_section long_section">
-
-    <div class="container">
-      <div class="contact_nav">
-        <a href="">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <span>
-            Call : +01 123455678990
-          </span>
-        </a>
-        <a href="">
-          <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span>
-            Email : demo@gmail.com
-          </span>
-        </a>
-        <a href="">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <span>
-            Location
-          </span>
-        </a>
-      </div>
-
-      <div class="info_top ">
-        <div class="row ">
-          <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="info_links">
-              <h4>
-                QUICK LINKS
-              </h4>
-              <div class="info_links_menu">
-                <a class="" href="/">Home <span class="sr-only">(current)</span></a>
-                <a class="" href="about.html"> About</a>
-                <a class="" href="furniture.html">Furniture</a>
-                <a class="" href="blog.html">Blog</a>
-                <a class="" href="contact.html">Contact Us</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 mx-auto">
-            <div class="info_post">
-              <h5>
-                INSTAGRAM FEEDS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/f1.png" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/f2.png" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/f3.png" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/f4.png" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/f5.png" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/f6.png" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info_form">
-              <h4>
-                SIGN UP TO OUR NEWSLETTER
-              </h4>
-              <form action="">
-                <input type="text" placeholder="Enter Your Email" />
-                <button type="submit">
-                  Subscribe
-                </button>
-              </form>
-              <div class="social_box">
-                <a href="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-    <!-- end info_section -->
-
     <!-- footer section -->
     <footer class="footer_section">
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="" style="color: #d92629">Ruang Hybrid</a>
         </p>
       </div>
     </footer>
