refactor responsive styles; clean up unused media queries and adjust padding in carousel

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             </div>
           </div>
           <div class="col-md-7">
-            <div class="img-box">
-              <img src="images/slider-img.png" alt="" />
+            <div class="img-box" style="padding: 60px">
+              <img src="images/logo.jpg" style="border-radius: 20px" alt="" />
             </div>
           </div>
         </div>
