update footer branding; change "Ruang Hybrid" to "Cleopatra" across multiple pages and adjust slider section padding for better responsiveness

--- a/belanja.html
+++ b/belanja.html
@@ -191,7 +191,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Ruang Hybrid</a>
+          <a href="" style="color: #d92629">Cleopatra</a>
         </p>
       </div>
     </footer>
