--- a/index.html
+++ b/index.html
@@ -127,13 +127,10 @@
     </section>
     <!-- furniture section -->
 
-    <section class="team_section layout_padding" id="rundown">
+    <!-- <section class="team_section layout_padding" id="rundown">
       <div class="container">
         <div class="heading_container">
           <h2>RUNDOWN <span style="color: #d92629">DAY 1</span></h2>
-          <!-- <p>
-          Jadwal Kegiatan
-        </p> -->
         </div>
         <table class="table table-bordered" style="margin-top: 50px">
           <thead>
@@ -182,7 +179,7 @@
           </tbody>
         </table>
       </div>
-    </section>
+    </section> -->
 
     <!-- end furniture section -->
 
@@ -195,7 +192,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Ruang Hybrid</a>
+          <a href="" style="color: #d92629">Cleopatra</a>
         </p>
       </div>
     </footer>
