--- a/saluran.html
+++ b/saluran.html
@@ -126,6 +126,7 @@
                   <a
                     href="https://whatsapp.com/channel/0029Vb5wTUU9hXFEFrNsDo23"
                     class="btn1"
+                    target="_blank"
                   >
                     <i class="fa fa-whatsapp"></i> Gabung
                   </a>
@@ -144,7 +145,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Ruang Hybrid</a>
+          <a href="" style="color: #d92629">Cleopatra</a>
         </p>
       </div>
     </footer>
