--- a/team.html
+++ b/team.html
@@ -320,7 +320,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="" style="color: #d92629">Ruang Hybrid</a>
+          <a href="" style="color: #d92629">Cleopatra</a>
         </p>
       </div>
     </footer>
