--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <p>KOTA BATU, 11-13 FEBRUARI 2025</p>
               <div class="btn-box">
                 <a href="team.html" class="btn1"> TEAM </a>
-                <a href="#rundown" class="btn2"> RUNDOWN </a>
+                <a href="#rundown" class="btn2"> SALURAN </a>
               </div>
             </div>
           </div>
