update layout; adjust alignment in carousel and modify column sizes for better responsiveness

--- a/fasilitator.html
+++ b/fasilitator.html
@@ -116,17 +116,16 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
+                <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
-                    <div class="img-box">
+                    <div class="img-box col-md-6">
                       <img src="images/herman.jpeg" alt="" />
                     </div>
-                    <div class="detail-box">
+                    <div class="detail-box col-md-6">
                       <div class="name">
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                         <h6>Herman</h6>
                       </div>
-                      <p>Ini Herman Fasilitator Group Merah.</p>
                     </div>
                   </div>
                 </div>
@@ -134,17 +133,19 @@
             </div>
             <div class="carousel-item">
               <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
+                <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
-                    <div class="img-box" style="border: 10px solid #d9ca26">
+                    <div
+                      class="img-box col-md-6"
+                      style="border: 10px solid #d9ca26"
+                    >
                       <img src="images/guntoro.jpeg" alt="" />
                     </div>
-                    <div class="detail-box">
+                    <div class="detail-box col-md-6">
                       <div class="name">
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                         <h6>Guntoro</h6>
                       </div>
-                      <p>Ini Guntoro Fasilitator Group Kuning.</p>
                     </div>
                   </div>
                 </div>
@@ -152,17 +153,19 @@
             </div>
             <div class="carousel-item">
               <div class="row">
-                <div class="col-md-11 col-lg-10 mx-auto">
+                <div class="col-md-12 col-lg-10 mx-auto">
                   <div class="box">
-                    <div class="img-box" style="border: 10px solid #41d926">
+                    <div
+                      class="img-box col-md-6"
+                      style="border: 10px solid #41d926"
+                    >
                       <img src="images/robby.jpeg" alt="" />
                     </div>
-                    <div class="detail-box">
+                    <div class="detail-box col-md-6">
                       <div class="name">
                         <i class="fa fa-quote-left" aria-hidden="true"></i>
                         <h6>Robby</h6>
                       </div>
-                      <p>Ini Robby Fasilitator Group Hijau.</p>
                     </div>
                   </div>
                 </div>
