update button styles; change margin to padding for better alignment and adjust button classes for improved spacing

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               </h1>
               <p>KOTA BATU, 11-13 FEBRUARI 2025</p>
               <div class="btn-box">
-                <a href="team.html" class="btn1"> TEAM </a>
-                <a href="saluran.html" class="btn2"> SALURAN </a>
+                <a href="team.html" class="btn1 mr-1 mb-1"> TEAM </a>
+                <a href="saluran.html" class="btn2 mb-1"> SALURAN </a>
               </div>
             </div>
           </div>
