update carousel ID references for consistency in fasilitator.html

--- a/fasilitator.html
+++ b/fasilitator.html
@@ -108,7 +108,7 @@
           <h2>FASILITATOR</h2>
         </div>
         <div
-          id="carouselExample2Controls"
+          id="carousel-data"
           class="carousel slide"
           data-ride="carousel"
           data-interval="false"
@@ -175,7 +175,7 @@
           <div class="carousel_btn-container">
             <a
               class="carousel-control-prev"
-              href="#carouselExample2Controls"
+              href="#carousel-data"
               role="button"
               data-slide="prev"
             >
@@ -184,7 +184,7 @@
             </a>
             <a
               class="carousel-control-next"
-              href="#carouselExample2Controls"
+              href="#carousel-data"
               role="button"
               data-slide="next"
             >
